# RoxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RoxEngine/: CMakeLists.txt
RoxEngine/src/: roxengine.cxx
RoxEngine/src/RoxEngine/: RoxEngine.hpp  roxengine.hpp
RoxEngine/src/RoxEngine/assetmanager/: AssetManager.cpp  AssetManager.cxx  AssetManager.hpp
RoxEngine/src/RoxEngine/core/: Buffer.h  Engine.cpp  Engine.cxx  Engine.hpp  Errors.cpp  Errors.cxx  Errors.hpp  Logger.cpp  Logger.cxx  Logger.hpp  Panic.cpp  Panic.cxx  Panic.hpp  Result.cpp  Result.cxx  Result.hpp  Window.cxx  Window.hpp  type_traits.hpp
RoxEngine/src/RoxEngine/ecs/: ecs.cpp  ecs.hpp
RoxEngine/src/RoxEngine/filesystem/: Filesystem.cpp  Filesystem.cxx  Filesystem.hpp  MimeTypeDB.hpp
RoxEngine/src/RoxEngine/imgui/: imgui.cpp  imgui.cxx  imgui.hpp
RoxEngine/src/RoxEngine/input/: Input.cpp  Input.cxx  Input.hpp
RoxEngine/src/RoxEngine/profiler/: cpu_profiler.hpp  gpu_profiler.hpp  profiler.cpp  profiler.hpp
RoxEngine/src/RoxEngine/renderer/: Buffer.cpp  Buffer.cxx  Buffer.hpp  GraphicsContext.cpp  GraphicsContext.cxx  GraphicsContext.hpp  Material.cpp  Material.cxx  Material.hpp  Mesh.hpp  Renderer.hpp  RendererPipeline.hpp  Shader.cpp  Shader.cxx  Shader.hpp  Transform.hpp  UniformBuffer.cpp  UniformBuffer.cxx  UniformBuffer.hpp  VertexArray.cpp  VertexArray.cxx  VertexArray.hpp  renderer.cpp  renderer.cxx
RoxEngine/src/RoxEngine/renderer/DefaultRendererPipeline/: DefaultRendererPipeline.cpp  DefaultRendererPipeline.hpp  Rendeder.cpp  Rendeder.hpp
RoxEngine/src/RoxEngine/scene/: Scene.cpp  Scene.hpp  import_flecs.h  scene.cxx  scene.hpp
RoxEngine/src/RoxEngine/slang/: slang.cpp  slang.cxx  slang.hpp
RoxEngine/src/RoxEngine/utils/: Memory.h  Utils.hpp  utils.cxx
RoxEngine/src/module/: module.cppm  platforms.cppm
Sandbox/: CMakeLists.txt
Sandbox/resources/shaders/: basic.slang
Sandbox/resources/shaders/internal/: roxengine.slang
Sandbox/src/: ShaderExplorer.hpp  main.cpp
